Bug 68876 - EDITING: infinite loop inserting pages when pasting a table into header on first page of page style
Summary: EDITING: infinite loop inserting pages when pasting a table into header on fi...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.1.1.2 release
Hardware: All All
: highest normal
Assignee: Michael Stahl (allotropia)
URL:
Whiteboard: BSA Confirmed:4.2.0.2:OSX target:4.3....
Keywords: regression
: 69590 69603 74938 (view as bug list)
Depends on:
Blocks: mab4.1
  Show dependency treegraph
 
Reported: 2013-09-03 07:31 UTC by dany franck
Modified: 2021-08-26 12:51 UTC (History)
7 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments
The document for the test (64.78 KB, application/vnd.oasis.opendocument.text)
2013-09-03 07:31 UTC, dany franck
Details
doc which freeze LO in an infinite loop (77.59 KB, application/vnd.oasis.opendocument.text)
2013-11-07 10:21 UTC, Jean-Baptiste Faure
Details

Note You need to log in before you can comment on or make changes to this bug.
Description dany franck 2013-09-03 07:31:41 UTC
Created attachment 85104 [details]
The document for the test

Problem description:
In the test1 document, when copying a selected text and pasting it in the header of the second page, writer goes in a page count loop. 

Steps to reproduce:
1. select yellow marked text in first page
2. Edit - Copy
3. goto yellow marked location in second page
4. Edit - Paste
5. Look on page count on the back left which goes in a loop


              
Operating System: Windows 7
Version: 4.1.1.2 rc
Last worked in: 4.1.0.4 release
Comment 1 tommy27 2013-09-05 22:38:53 UTC
tested on Windows 7 64bit
Version: 4.1.1.2 --> bug reproducible
Version: 4.10.4  --> bug non reproducible

setting status to NEW
edited summary notes
adding Writer expert to CC list
Comment 2 dany franck 2013-10-09 10:20:15 UTC
The bug has been back-ported on 3.0.6.1.
Use the document to confirm.
No problem with 3.0.5.2
Comment 3 tommy27 2013-10-09 11:16:58 UTC
@dany
do you mean 4.0.6?
Comment 4 dany franck 2013-10-09 12:52:28 UTC
Yes, excuse me
4.0.6.1 KO
4.0.5.2 OK
Comment 5 dany franck 2013-10-09 12:57:01 UTC
Could it be this bug has anything to do with ?
Comment 6 dany franck 2013-10-09 12:57:24 UTC
https://bugs.freedesktop.org/show_bug.cgi?id=63273
ooops
Comment 7 Jean-Baptiste Faure 2013-11-07 10:21:36 UTC
Created attachment 88816 [details]
doc which freeze LO in an infinite loop

Reproducible on Ubuntu 13.10 x86-64 too with LibreOffice 4.1.4.0.0+

We have the same effect if, instead of copying the table, we enclose it in a section and link this section in the header. No problem to modify the document this way and save it. But when reopening the file and accepting the external links update, LO starts an infinite loop on pages numbering.

Best regards. JBF
Comment 8 Arnaud Versini 2013-11-07 13:16:39 UTC
No issue for me on OpenSue with LibreOffice 4.1.3.2.
Comment 9 Jean-Baptiste Faure 2013-11-07 19:53:25 UTC
It's strange, with the same build but on another machine (Ubuntu 13.10 x86-64) I can't reproduce the problem.
Using a fresh user profile did not fix the problem on the first computer.

I can't imagine what difference between both computers could trigger the faulty behavior.

Best regards. JBF
Comment 10 dany franck 2013-11-07 20:16:39 UTC
Same problem on Mageia 3 64 with LO 4.1.3.2-2.x86-64 with the two documents.
Comment 11 dany franck 2013-11-28 07:15:28 UTC
No problem with 4.2.0.0b1.
Thanks a lot
Comment 12 dany franck 2013-12-22 10:17:54 UTC
No bug on Mageia 4b2 with LO 4.1.3.2-3.x86-64

Bug on 4.1.4 (Windows 8.1-64)

The bug was reintroduced in 4.2.0.1 (Windows 8.1-64)
Comment 13 Björn Michaelsen 2014-01-17 09:51:55 UTC
(This is an automated message.)

Setting priority to highest as this is a 4.1 MAB. This is part of an effort to make the importance of MAB reflected in priority too.
Comment 14 retired 2014-01-17 12:21:34 UTC
Confirmed:4.2.0.2:OSX
Comment 15 Jean-Baptiste Faure 2014-01-17 18:53:29 UTC
I do not reproduce anymore with version 4.2.1.0.0+ on Ubuntu 13.10 64 bits.

Best regards. JBF
Comment 16 Michael Stahl (allotropia) 2014-01-23 12:33:20 UTC
argh... this one is giving me a hard time: in 4.1.1.2 built half a year ago i can reproduce it but if i build 4.1.1.2 now then it doesn't happen :(
that makes bisecting difficult...
Comment 17 dany franck 2014-01-23 15:08:06 UTC
The bug was present in all the following versions until 4.2.0b1 and is also in 4.2.0.2.
Comment 18 Michael Stahl (allotropia) 2014-01-23 15:08:47 UTC
better luck now...

bisect give this half-way plausible commit:

commit 75084f6c42c27dc95418df9cefed2fddfb26000e
Author:     Michael Stahl <mstahl@redhat.com>
AuthorDate: Tue Aug 20 11:41:37 2013 +0200

    fdo#66145: do not check IsFirstShared() in SwPageDesc::GetLeftFmt()
    
    ... and GetRightFmt().  If the first format is requested it must be
    returned; the sharing works by copying the SwFmtHeader/Footer from
    aMaster to the other members.
Comment 19 Michael Stahl (allotropia) 2014-01-23 21:36:43 UTC
these 2 commits introduce the regression:

commit e44335abe006d05f0f915279605a03ef084116d6
Author:     Caolán McNamara <caolanm@redhat.com>
AuthorDate: Thu Oct 31 15:51:30 2013 +0000

    Related #i123433# PolyPolygonBezier must be drawing::PolyPolygonBezierCoords

    Change-Id: Idc7e0a2651f2e0b499bbf8b8443ffb84b54a45b6

commit 223f6b631c1b087754c0f9051fb55f029f2503ce
Author:     Armin Le Grand <alg@apache.org>
AuthorDate: Tue Oct 29 14:11:45 2013 +0000
Commit:     Caolán McNamara <caolanm@redhat.com>
CommitDate: Thu Oct 31 15:56:14 2013 +0000

    Resolves: #i123433# Detect pseudo-vertices at svg import...

    unify svg:d handling, correct svg:d import for relative sub-polygons in svg
    import; changed default for moveto writes for svg:d in ODF to absolute
Comment 20 Michael Stahl (allotropia) 2014-01-23 21:37:26 UTC
crap... disregard comment #19, wrong bug
Comment 21 Commit Notification 2014-01-24 23:57:37 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=ecf617ee0cb74526e3989500c122835c32082845

fdo#68876: sw: layout should never care about IsFirstShared()



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 22 Michael Stahl (allotropia) 2014-01-25 00:08:39 UTC
fixed on master
Comment 23 Commit Notification 2014-01-25 11:55:30 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-4-2":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=77d63a83125a2471be0d121211e914aa5616ce2b&h=libreoffice-4-2

fdo#68876: sw: layout should never care about IsFirstShared()


It will be available in LibreOffice 4.2.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 24 Commit Notification 2014-01-25 12:02:17 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-4-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=34afdbfd9689ecfa2ea3e93cd7812d192016baf3&h=libreoffice-4-1

fdo#68876: sw: layout should never care about IsFirstShared()


It will be available in LibreOffice 4.1.6.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 25 dany franck 2014-01-28 16:14:30 UTC
Tested with 4.1.6 and 4.3.0 under W8 64b: OK
Thanks a lot.
Comment 26 Commit Notification 2014-01-30 15:11:41 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-4-1-5":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=41e7a4e9a7199cc1e93792ca34c74e3784a93274&h=libreoffice-4-1-5

fdo#68876: sw: layout should never care about IsFirstShared()


It will be available already in LibreOffice 4.1.5.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 27 Michael Stahl (allotropia) 2014-02-03 16:56:27 UTC
*** Bug 69603 has been marked as a duplicate of this bug. ***
Comment 28 Michael Stahl (allotropia) 2014-03-13 16:29:38 UTC
*** Bug 74938 has been marked as a duplicate of this bug. ***
Comment 29 Michael Stahl (allotropia) 2014-03-13 17:19:15 UTC
*** Bug 69590 has been marked as a duplicate of this bug. ***