fdo#68876: sw: layout should never care about IsFirstShared()

With 75084f6c42c27dc95418df9cefed2fddfb26000e the layout should put the
"first" frame-format on every first-page of a page style; unfortunately
SwFrm::OnFirstPage() was not adapted with this change and that results
in various misbehaviour in the layout.

Change-Id: Ia31add0d72ca581963b7e8e40c3ea932361b7fd6
(cherry picked from commit ecf617ee0cb74526e3989500c122835c32082845)
Reviewed-on: https://gerrit.libreoffice.org/7639
Reviewed-by: Miklos Vajna <vmiklos@collabora.co.uk>
Tested-by: Miklos Vajna <vmiklos@collabora.co.uk>