sw/source/core/layout/trvlfrm.cxx
@@ -1909,7 +1909,7 @@ bool SwFrm::OnFirstPage() const
         if (pPrevFrm)
         {
             const SwPageDesc* pDesc = pPage->GetPageDesc();
-            bRet = pPrevFrm->GetPageDesc() != pDesc && !pDesc->IsFirstShared();
+            bRet = pPrevFrm->GetPageDesc() != pDesc;
         }
         else
             bRet = true;
